[package]
name = "bitvora"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Rust SDK for the Bitvora API"
repository = "https://github.com/bitvora/bitvora-rs"
readme = "README.md"
keywords = ["bitvora", "api", "sdk", "rust"]
authors = ["Bitvora", "Barry Deen"]

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.12.8", features = ["json", "default-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
